update something new

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,2 +1,5 @@
-<unauthenticated-layout *ngIf="layout === 'unauthenticated'"></unauthenticated-layout>
+<app-loading-bar></app-loading-bar>
+<unauthenticated-layout
+  *ngIf="layout === 'unauthenticated'"
+></unauthenticated-layout>
 <authenticated-layout *ngIf="layout === 'authenticated'"></authenticated-layout>
