--- a/src/app/modules/admin/users/user-change-password/user-change-password.component.html
+++ b/src/app/modules/admin/users/user-change-password/user-change-password.component.html
@@ -14,6 +14,7 @@
         <mat-label>{{ "ChangePassword.NewPassword" | translate }}</mat-label>
         <input
           matInput
+          appPreventAutoFill
           type="password"
           formControlName="newPassword"
           #newPasswordField
@@ -63,6 +64,7 @@
         }}</mat-label>
         <input
           matInput
+          appPreventAutoFill
           type="password"
           formControlName="confirmNewPassword"
           #confirmNewPasswordField
