--- a/src/app/modules/admin/users/user-profile/tutor-profile/tutor-profile.component.html
+++ b/src/app/modules/admin/users/user-profile/tutor-profile/tutor-profile.component.html
@@ -10,16 +10,16 @@
       <div class="mb-4">
         <div class="flex gap-5 items-center">
           <img
-            *ngIf="tutorProfileForm.get('profilePictureUrl')?.value"
+            *ngIf="tutorProfileForm.get('avatar')?.value"
             class="w-20 h-20 rounded-full overflow-hidden"
-            [src]="tutorProfileForm.get('profilePictureUrl')?.value"
+            [src]="tutorProfileForm.get('avatar')?.value"
             alt=""
           />
           <div
-            *ngIf="!tutorProfileForm.get('profilePictureUrl')?.value"
+            *ngIf="!tutorProfileForm.get('avatar')?.value"
             class="w-20 h-20 rounded-full overflow-hidden flex justify-center items-center font-medium bg-primary text-white uppercase text-2xl"
           >
-            {{ tutorProfileForm.get("firstName")?.value?.charAt(0) || "H" }}
+            {{ userProfile?.firstName?.charAt(0) || "" }}
           </div>
 
           <div class="flex gap-2 justify-center">
@@ -32,14 +32,14 @@
               (click)="uploadProfilePictureFile.click()"
             >
               {{
-                tutorProfileForm.get("profilePictureUrl")?.value
+                tutorProfileForm.get("avatar")?.value
                   ? ("FileUpload.Change" | translate)
                   : ("FileUpload.AddAPhoto" | translate)
               }}
             </button>
             <!-- Remove image -->
             <button
-              *ngIf="tutorProfileForm.get('profilePictureUrl')?.value"
+              *ngIf="tutorProfileForm.get('avatar')?.value"
               type="button"
               mat-button
               class="btn--sm"
@@ -74,13 +74,10 @@
           mat-icon-button
           type="button"
           matSuffix
-          *ngIf="firstName.value != ''"
+          *ngIf="firstName.value != '' && !tutorProfileForm.disabled"
           (click)="tutorProfileForm.get('firstName')?.setValue('')"
         >
-          <mat-icon
-            
-            [svgIcon]="'mat_outline:close'"
-          ></mat-icon>
+          <mat-icon [svgIcon]="'mat_outline:close'"></mat-icon>
         </button>
         <mat-error
           *ngIf="tutorProfileForm.get('firstName')?.hasError('required')"
@@ -99,13 +96,10 @@
           mat-icon-button
           type="button"
           matSuffix
-          *ngIf="lastName.value != ''"
+          *ngIf="lastName.value != '' && !tutorProfileForm.disabled"
           (click)="tutorProfileForm.get('lastName')?.setValue('')"
         >
-          <mat-icon
-            
-            [svgIcon]="'mat_outline:close'"
-          ></mat-icon>
+          <mat-icon [svgIcon]="'mat_outline:close'"></mat-icon>
         </button>
         <mat-error
           *ngIf="tutorProfileForm.get('lastName')?.hasError('required')"
@@ -162,20 +156,14 @@
           "
           (click)="tutorProfileForm.get('email')?.setValue('')"
         >
-          <mat-icon
-            
-            [svgIcon]="'mat_outline:close'"
-          ></mat-icon>
+          <mat-icon [svgIcon]="'mat_outline:close'"></mat-icon>
         </button>
         <div
-          class="ml-2 flex items-center justify-center"
+          class="ml-2 flex justify-center items-center"
           matSuffix
           *ngIf="tutorProfileForm.get('email')?.valid"
         >
-          <mat-icon
-            
-            [svgIcon]="'mat_outline:check'"
-          ></mat-icon>
+          <mat-icon [svgIcon]="'mat_outline:check'"></mat-icon>
         </div>
         <mat-progress-spinner
           [diameter]="24"
@@ -197,9 +185,9 @@
         <textarea
           matInput
           cdkTextareaAutosize
-          cdkAutosizeMinRows="2"
+          cdkAutosizeMinRows="3"
           formControlName="introduction"
-          placeholder=""
+          placeholder="{{ 'TutorProfile.IntroductionDescription' | translate }}"
           maxlength="1000"
           appPreventAutoFill
         ></textarea>
@@ -229,13 +217,10 @@
           mat-icon-button
           type="button"
           matSuffix
-          *ngIf="videoIntroduction.value != ''"
+          *ngIf="videoIntroduction.value != '' && !tutorProfileForm.disabled"
           (click)="tutorProfileForm.get('videoIntroduction')?.setValue('')"
         >
-          <mat-icon
-            
-            [svgIcon]="'mat_outline:close'"
-          ></mat-icon>
+          <mat-icon [svgIcon]="'mat_outline:close'"></mat-icon>
         </button>
       </mat-form-field>
     </div>
@@ -298,7 +283,7 @@
       </mat-form-field>
       <mat-form-field appearance="fill" class="w-full" floatLabel="always">
         <mat-label>{{ "TutorProfile.WhatYouTeach" | translate }}</mat-label>
-        <mat-chip-list #chipTeachingJobList>
+        <mat-chip-list #chipTeachingJobList formControlName="teachingJobs">
           <mat-chip
             [disableRipple]="true"
             *ngFor="
@@ -307,7 +292,7 @@
             (removed)="remove(job)"
           >
             {{ job }}
-            <button matChipRemove>
+            <button matChipRemove [disabled]="tutorProfileForm.disabled">
               <mat-icon [svgIcon]="'mat_outline:close'"></mat-icon>
             </button>
           </mat-chip>
@@ -358,7 +343,10 @@
         >
       </mat-form-field>
       <div class="flex flex-col mb-4">
-        <div class="text-tertiary flex gap-1 items-center mb-2">
+        <div
+          class="text-secondary flex gap-1 items-center mb-2"
+          [ngClass]="tutorProfileForm.disabled ? 'opacity-70' : ''"
+        >
           {{ "TutorProfile.LanguagesYouSpeak" | translate }}
         </div>
         <div formArrayName="languages" class="flex flex-col gap-3">
@@ -434,7 +422,12 @@
               class="mt-3"
               *ngIf="languagesFormArray.controls.length > 1 && i > 0"
             >
-              <button mat-icon-button type="button" (click)="removeLanguage(i)">
+              <button
+                mat-icon-button
+                type="button"
+                (click)="removeLanguage(i)"
+                [disabled]="tutorProfileForm.disabled"
+              >
                 <mat-icon
                   class="text-danger"
                   svgIcon="mat_outline:clear"
@@ -443,7 +436,7 @@
             </div>
           </div>
 
-          <div class="flex justify-end">
+          <div class="flex justify-end" *ngIf="!tutorProfileForm.disabled">
             <a class="cursor-pointer" (click)="addLanguage()">
               {{ "TutorProfile.AddLanguage" | translate }}</a
             >
@@ -452,13 +445,16 @@
       </div>
 
       <div class="flex flex-col mb-4">
-        <div class="text-tertiary flex gap-1 items-center mb-2">
+        <div
+          class="text-secondary flex gap-1 items-center mb-2"
+          [ngClass]="tutorProfileForm.disabled ? 'opacity-70' : ''"
+        >
           {{ "TutorProfile.TeachingCertificates" | translate }}
           <span class="text-danger">*</span>
           <span class="text-gray-400 font-normal text-sm"
             >({{
               "FileUpload.OnlyFileTypeAndMaxSize"
-                | translate : { fileType: ".pdf", maxSize: "32MB" }
+                | translate : { fileType: ".pdf", maxSize: "5MB" }
             }})</span
           >
         </div>
@@ -488,6 +484,7 @@
               mat-flat-button
               class="btn--sm"
               [color]="'primary'"
+              [disabled]="tutorProfileForm.disabled"
               (click)="uploadFile.click()"
             >
               {{ "FileUpload.BrowseFiles" | translate }}
@@ -506,7 +503,7 @@
             *ngIf="this.tutorProfileForm.get('teachingCertificates')?.value"
           >
             <div
-              class="bg-surface rounded flex gap-4 items-center px-3 py-2 border border-solid border-light shadow-sm"
+              class="bg-surface rounded flex gap-4 items-center px-3 py-2 border border-solid border-light"
               *ngFor="
                 let file of this.tutorProfileForm.get('teachingCertificates')
                   ?.value || [];
@@ -517,7 +514,9 @@
                 <div
                   class="text-gray-600 overflow-hidden text-ellipsis whitespace-nowrap"
                 >
-                  {{ file.name }}
+                  <a [href]="file.url" target="_blank" class="text-inherit">
+                    {{ file.originalname }}
+                  </a>
                 </div>
                 <div class="text-gray-400 text-sm">
                   {{ file.size / 1024 | number : "1.2" }} KB
@@ -528,6 +527,7 @@
                 <button
                   mat-icon-button
                   type="button"
+                  [disabled]="tutorProfileForm.disabled"
                   (click)="removeCertificate(i)"
                 >
                   <mat-icon
