--- a/src/app/modules/admin/users/user-profile-view/user-profile-view.component.html
+++ b/src/app/modules/admin/users/user-profile-view/user-profile-view.component.html
@@ -31,12 +31,20 @@
               {{ userProfile?.firstName?.charAt(0) || "" }}
             </div>
             <div class="flex flex-col">
-              <div class="text-lg font-medium">
-                {{
-                  userProfile?.firstName
-                    ? userProfile?.firstName + " " + userProfile?.lastName
-                    : ""
-                }}
+              <div class="flex items-center gap-2">
+                <div class="font-medium text-accent">
+                  {{
+                    userProfile?.firstName
+                      ? userProfile?.firstName + " " + userProfile?.lastName
+                      : ""
+                  }}
+                </div>
+                <div
+                  class="rounded px-2 py-1 text-sm font-medium text-white"
+                  [ngClass]="getStatus(userProfile.status).class"
+                >
+                  {{ getStatus(userProfile.status).label }}
+                </div>
               </div>
               <div class="text-tertiary">{{ userProfile?.userType }}</div>
             </div>
@@ -46,7 +54,7 @@
               class="cursor-default flex"
               [matTooltip]="'Action.SendEmail' | translate"
               matTooltipPosition="left"
-              href="mailto:{{userProfile?.email}}"
+              href="mailto:{{ userProfile?.email }}"
             >
               <mat-icon class="icon" [svgIcon]="'mat_outline:email'"></mat-icon>
             </a>
@@ -143,7 +151,8 @@
                 let item of userProfile?.tutorProfile?.teachingCertificates
               "
               class="text-accent cursor-default"
-              [href]="item.url" target="_blank"
+              [href]="item.url"
+              target="_blank"
               >{{ item.originalname }}</a
             >
           </div>
@@ -189,12 +198,20 @@
               {{ userProfile?.firstName?.charAt(0) || "" }}
             </div>
             <div class="flex flex-col">
-              <div class="text-lg font-medium">
-                {{
-                  userProfile?.firstName
-                    ? userProfile?.firstName + " " + userProfile?.lastName
-                    : ""
-                }}
+              <div class="flex items-center gap-2">
+                <div class="font-medium text-primary">
+                  {{
+                    userProfile?.firstName
+                      ? userProfile?.firstName + " " + userProfile?.lastName
+                      : ""
+                  }}
+                </div>
+                <div
+                  class="rounded px-2 py-1 text-sm font-medium text-white"
+                  [ngClass]="getStatus(userProfile.status).class"
+                >
+                  {{ getStatus(userProfile.status).label }}
+                </div>
               </div>
               <div class="text-tertiary">{{ userProfile?.userType }}</div>
             </div>
@@ -204,7 +221,7 @@
               class="cursor-default flex"
               [matTooltip]="'Action.SendEmail' | translate"
               matTooltipPosition="left"
-              href="mailto:{{userProfile?.email}}"
+              href="mailto:{{ userProfile?.email }}"
             >
               <mat-icon class="icon" [svgIcon]="'mat_outline:email'"></mat-icon>
             </a>
